--- a/ansible/tasks/600_checkup_server_up.yml
+++ b/ansible/tasks/600_checkup_server_up.yml
@@ -8,6 +8,6 @@
     delay: 30
     timeout: 600
   become: false
-  when: reboot_hint.rc != 0 or reboot_required=='true'
+  when: reboot_hint.rc != 0 or force_reboot == 'true'
   delegate_to: localhost
   connection: local
