Added ssh connection retries option to ansible.cfg

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,4 +3,7 @@
 # some basic default values...
 
 inventory      = hosts
-log_path       = logs/ansible.log 
+log_path       = logs/ansible.log
+
+[ssh_connection]
+retries = 6
